# Home_Assistant

./: .gitignore  README.md  pyproject.toml  run_project.py
Backend/: .env.example  ai_chat.py  app.py  auth.py  models.py  network_files.py  nos.py  spotify.py  weather.py
Frontend/: README.md  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.vue  main.ts  system.ts
Frontend/src/components/: ChatBox.vue  FileExplorer.vue  HourlyForecast.vue  NewsCarousel.vue  SmallStatCard.vue  SpotifyControls.vue  SpotifyDeviceSelector.vue  SpotifyStatus.vue  SpotifyTrackCard.vue  SystemUsage.vue  UsageDial.vue  WeatherSummary.vue
Frontend/src/composables/: news.ts  weather.ts
Frontend/src/router/: index.ts
Frontend/src/views/: ChatView.vue  FileManagementView.vue  HomeView.vue  LoginView.vue  PeopleView.vue  ProfileView.vue  RegisterView.vue  SettingsView.vue  SpotifyView.vue  SystemUsageView.vue
