[tool.poetry]
name = "home-assistant"
version = "0.1.0"
description = ""
authors = ["Xander te Winkel <572004@student.saxion.nl>"]
readme = "README.md"
packages = [
    { include = "Backend" }  # tells Poetry your Python code is in Backend/
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = ">=3.1.2,<4.0.0"
psutil = ">=7.1.3,<8.0.0"
pysmb = ">=1.2.13,<2.0.0"
requests = ">=2.32.5,<3.0.0"
openai = ">=2.9.0,<3.0.0"
flask-cors = ">=6.0.1,<7.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
spotipy = "^2.25.2"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"

[tool.poetry.dev-dependencies]
# Add dev dependencies here if needed (e.g., black, pytest)

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
